@@ -4,7 +4,6 @@
 
 package com.linkedin.kafka.cruisecontrol.detector;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -25,7 +24,7 @@ public enum AnomalyDetectionStatus {
   READY, SKIP_HAS_OFFLINE_REPLICAS, SKIP_LOAD_MONITOR_NOT_READY, SKIP_EXECUTOR_NOT_READY, SKIP_MODEL_GENERATION_NOT_CHANGED,
   SKIP_HAS_DEAD_BROKERS;
 
-  private static final List<AnomalyDetectionStatus> CACHED_VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+  private static final List<AnomalyDetectionStatus> CACHED_VALUES = List.of(values());
 
   /**
    * Use this instead of values() because values() creates a new array each time.
