@@ -4,7 +4,6 @@
 
 package com.linkedin.kafka.cruisecontrol.servlet.purgatory;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -15,7 +14,7 @@ import java.util.List;
 public enum ReviewStatus {
   PENDING_REVIEW, APPROVED, SUBMITTED, DISCARDED;
 
-  private static final List<ReviewStatus> CACHED_VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+  private static final List<ReviewStatus> CACHED_VALUES = List.of(values());
 
   /**
    * Use this instead of values() because values() creates a new array each time.
